# effective-potato

./: .gitignore  Dockerfile  Dockerfile.base  Dockerfile.runner  IMPLEMENTATION.md  README.md  build.sh  mcp-config.json  mcp-http.sh  mcp.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run-tests.sh  setup.py
.agent/: master_server.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: README.md  basic_usage.py  launch_and_screenshot.md  mcpServers.dual-toolkits.json  mcpServers.streamable-http.json
local/: sample.env
openweb_exports/effective-potato/: effective-potato_20251005T015258Z.json  effective-potato_20251005T034732Z.json  effective-potato_20251008T022541Z.json  effective-potato_20251008T170710Z.json
scripts/: entrypoint.sh  export_openweb_model.sh  import_openweb_model.sh  mock_openweb_server.py  publish_openweb_model.sh  redeploy_openweb_model.sh  register_openweb_model.sh  start-services.sh  xserver-entry.sh
scripts/supervisor/: xserver.conf
src/effective_potato/: __init__.py  container.py  github.py  openweb.py  server.py  web.py
tests/: __init__.py  test_apply_patch_tool.py  test_container.py  test_container_diagnostics.py  test_execute_background_and_logs.py  test_find_venvs.py  test_find_venvs_activation.py  test_git_branch_tools.py  test_git_init_guard.py  test_git_push_confirmation.py  test_git_status_diff_tools.py  test_github.py  test_inspect_tools.py  test_interact_and_record.py  test_json_yaml.py  test_launch_and_screenshot.py  test_list_dir_tool.py  test_mouse_actions.py  test_openweb_publish_register.py  test_openweb_scripts.py  test_pipeline.py  test_prune_tracked_repos.py  test_python_runner_tools.py  test_python_tools.py  test_recommended_flow.py  test_redeploy_openweb_script.py  test_removed_file_tools.py  test_review_toolkit.py  test_screenshot_tool.py  test_select_venv.py  test_server.py  test_task_lifecycle.py  test_task_list_tool.py  test_tracked_repos.py  test_web.py  test_workspace_find.py  test_workspace_io.py  test_workspace_utilities.py
tests/integration/: test_container_lifecycle_integration.py  test_gui_flows_integration.py  test_python_runner_integration.py  test_server_watchdog_and_diagnostics_integration.py  test_tar_and_digest_integration.py  test_workspace_find_venvs_integration.py
