[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "effective-potato"
version = "0.1.1"
description = "MCP server for sandboxed Ubuntu container execution"
authors = [{ name = "Gavin Barnard" }]
requires-python = ">=3.8"
dependencies = [
  "mcp>=1.0.0",
  "docker>=7.0.0",
  "flask>=3.0.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
effective-potato = "effective_potato.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "I", "W"]
ignore = []
exclude = ["venv", ".venv"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
exclude = ["venv", ".venv"]

