[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "effective-potato"
version = "0.2.0"
description = "MCP server for sandboxed Ubuntu container execution"
authors = [{ name = "Gavin Barnard" }]
requires-python = ">=3.8"
dependencies = [
  "mcp>=1.0.0",
  "docker>=7.0.0",
  "PyYAML>=6.0",
  "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[project.scripts]
effective-potato = "effective_potato.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"
# Exclude virtualenv and non-critical example/script paths from lint checks
exclude = [
  "venv",
  ".venv",
  "examples",
  "scripts",
  "setup.py",
  "tests",
]

[tool.ruff.lint]
# Keep core error/warning/import checks; relax specific noisy rules below
select = ["E", "F", "I", "W"]
# Temporarily ignore E501 (line too long) and W293 (blank line whitespace) to avoid
# churn; we can address formatting incrementally without blocking CI.
ignore = ["E501", "W293"]

[tool.ruff.lint.per-file-ignores]
"src/effective_potato/web.py" = ["I001"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
exclude = ["venv", ".venv"]

